@@ -1,5 +1,7 @@
 2003-09-08  Marcus Brinkmann  <marcus@gnu.org>
 
+	* l4/space.h (l4_is_nil_fpage): New function.
+
 	* l4/types.h: Fix size of error field.
 
 	* l4/ipc.h (l4_ipc_succeeded): Invert return value.
